[package]
name = "quantus_ur"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4.3", default-features = true }
ur-registry = { git = "https://github.com/KeystoneHQ/keystone-sdk-rust", tag = "0.0.52", default-features = false, features = ["std"] }
ur-parse-lib = { git = "https://github.com/KeystoneHQ/keystone-sdk-rust", tag = "0.0.52" }
minicbor = { version = "0.19", features = ["alloc"] }
ur = { git = "https://github.com/KeystoneHQ/ur-rs", tag = "0.3.3" }
