[package]
name = "quantus_ur"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ur-registry = { git = "https://git@github.com/KeystoneHQ/keystone-sdk-rust.git", tag = "0.0.52", default-features = false, features = ["core"] }
ur-parse-lib = { git = "https://git@github.com/KeystoneHQ/keystone-sdk-rust.git", tag = "0.0.52", default-features = false }
ur = { git = "https://github.com/KeystoneHQ/ur-rs", tag = "0.3.3", default-features = false }
minicbor = { version = "0.19", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[features]
default = []
std = [
]